Bug 391750 - Bundle does not stay inactive at next start
Summary: Bundle does not stay inactive at next start
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-12 13:31 UTC by mvowada
Modified: 2018-03-12 15:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2018-03-12 13:31:12 UTC
(Krita 4.1.0-pre-alpha (git d0e6714) - Ubuntu 14.04 Unity)

When I disable the "Krita_3_Default_Resources" bundle (which is active by default in the forthcoming Krita 4), it shows up again at next start.

    1) menu > "Settings" > "Manage Resources..." > move the bundle to the "Inactive Bundles" pane
    2) restart Krita

Actual Results: the bundle returns active at next start.
Expected Results: I wonder if the bundle should remains inactive instead ?
Comment 1 Halla Rempt 2018-03-12 13:32:11 UTC
I wonder if this is specific to the appimage, since it doesn't happen with my own builds.
Comment 2 mvowada 2018-03-12 13:34:46 UTC
(Forgot to mention that I tested actually using the linux Appimage)
Comment 3 mvowada 2018-03-12 13:38:52 UTC
I've checked the resource folder but it seems that the bundle blacklist file is not even generated, it's not there. (https://forum.kde.org/viewtopic.php?f=139&t=151442)
Comment 4 Alvin Wong 2018-03-12 13:44:05 UTC
Regarding the bug report itself, you can omit the specific version string on the report summary, it's a bit of a distraction there. Just putting it in the description is fine.

For the version field, please "git master" for the nightly builds. 4.0 pre-alpha was released quite a while ago so not at all applicable.
Comment 5 Halla Rempt 2018-03-12 13:45:33 UTC
The 3.x default bundle actually isn't managed through the blacklist mechanism, but with a setting in the config file.
Comment 6 Halla Rempt 2018-03-12 14:25:28 UTC
Hm, actually... I get this output:

krita.general: Could not open store on bundle "/home/boud/dev/i-krita/share/krita/(bundles/Krita_3_Default_Resources.bundle"

And the ( in that line shows that this build is missing commit

e2f7a878a32194f0a290cc7fc60a94ea5ffd7457

Which is very strange, since d0e6714 is newer than that...
Comment 7 Halla Rempt 2018-03-12 15:19:14 UTC
Git commit cd36b534abae8843cd992818d1fb627b3c379688 by Boudewijn Rempt.
Committed on 12/03/2018 at 15:18.
Pushed by rempt into branch 'master'.

Try even harder to keep the Krita 3 bundle out of the regular blacklist

M  +36   -24   libs/widgets/KoResourceServer.h
M  +4    -3    libs/widgets/KoResourceServerProvider.cpp
M  +1    -1    plugins/extensions/resourcemanager/dlg_bundle_manager.cpp

https://commits.kde.org/krita/cd36b534abae8843cd992818d1fb627b3c379688
Comment 8 Halla Rempt 2018-03-12 15:19:27 UTC
Git commit ca3199cc926ee10e3b544ecf2994f17b7306f9fe by Boudewijn Rempt.
Committed on 12/03/2018 at 15:19.
Pushed by rempt into branch 'krita/4.0'.

Try even harder to keep the Krita 3 bundle out of the regular blacklist
(cherry picked from commit cd36b534abae8843cd992818d1fb627b3c379688)

M  +36   -24   libs/widgets/KoResourceServer.h
M  +4    -3    libs/widgets/KoResourceServerProvider.cpp
M  +1    -1    plugins/extensions/resourcemanager/dlg_bundle_manager.cpp

https://commits.kde.org/krita/ca3199cc926ee10e3b544ecf2994f17b7306f9fe