Try even harder to keep the Krita 3 bundle out of the regular blacklist

BUG:391750